# game.libretro.gambatte

./: .travis.yml  CMakeLists.txt  appveyor.yml
debian/: control
depends/common/gambatte/: CMakeLists.txt  gambatte.txt
game.libretro.gambatte/: addon.xml.in
game.libretro.gambatte/resources/: settings.xml
game.libretro.gambatte/resources/language/English/: strings.po
game.libretro.gambatte/resources/language/resource.language.af_za/: strings.po
game.libretro.gambatte/resources/language/resource.language.am_et/: strings.po
game.libretro.gambatte/resources/language/resource.language.ar_dz/: strings.po
game.libretro.gambatte/resources/language/resource.language.ar_sa/: strings.po
game.libretro.gambatte/resources/language/resource.language.ast_es/: strings.po
game.libretro.gambatte/resources/language/resource.language.az_az/: strings.po
game.libretro.gambatte/resources/language/resource.language.be_by/: strings.po
game.libretro.gambatte/resources/language/resource.language.bg_bg/: strings.po
game.libretro.gambatte/resources/language/resource.language.bs_ba/: strings.po
game.libretro.gambatte/resources/language/resource.language.ca_es/: strings.po
game.libretro.gambatte/resources/language/resource.language.cs_cz/: strings.po
game.libretro.gambatte/resources/language/resource.language.cy_gb/: strings.po
game.libretro.gambatte/resources/language/resource.language.da_dk/: strings.po
game.libretro.gambatte/resources/language/resource.language.de_de/: strings.po
game.libretro.gambatte/resources/language/resource.language.el_gr/: strings.po
(+67 files in other folders)
